Update E-commerce Websites

--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -179,64 +179,49 @@ permalink: /ecommerce-websites/
 
                 <h2>Sybiltec's E-commerce Website Service</h2>
 
-                <p>My e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, I can advise you to make the best choice. For more information, you can also read our blog post on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What are the Differences?</a></p>
+                <p>Our e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, we can advise you to make the best choice. For more information, you can also read our blog post on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What are the Differences?</a></p>
 
                 <h3>E-commerce Website Migration</h3>
 
-                <p>Are you dissatisfied with your current e-commerce platform? If you have an existing e-commerce site which you're looking to migrate, then I can also support you with this. we will help you to transfer your design, products, pages and forms to the new website, which will be built on Shopify or WooCommerce.</p>
+                <p>Are you dissatisfied with your current e-commerce platform? If you have an existing e-commerce site which you're looking to migrate, then we can also support you with this. We will help you to transfer your design, products, pages and forms to the new website, which will be built on Shopify or WooCommerce.</p>
 
-                <h2>Who This Service Suitable is For</h2>
+                <h2>Who This Service is Suitable For</h2>
 
-                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then my e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see my <a href="https://sybiltec.com/small-business-web-design/">Small Business Website</a> service instead.</p>
+                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then our e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see our <a href="https://sybiltec.com/small-business-web-design/">Small Business Website</a> service.</p>
 
                 <h2>What the Process Involves</h2>
 
-                <p>we will begin by getting to know your business, and your purpose for building the website. we will gather your requirements and present you with the best solution. I'll provide you with a quote, and if you indicate that you are happy to proceed, then we will send you an agreement via email and an invoice for the deposit, which is usually 33% of the total amount to be paid. Once I have received the signed agreement and the deposit, we will begin with the work.</p>
+                <p>We will begin by getting to know your business, and your purpose for building the website. We will gather your requirements and present you with the best solution. We'll then provide you with a quote, and if you indicate that you are happy to proceed, then we will send you an agreement via email and an invoice for the deposit, which is usually 33% of the total amount to be paid. Once we have received the signed agreement and the deposit, we will begin with the work.</p>
 
-                <p>we will create an initial design for your website and send you a link to this design for your review and feedback. I'll revise the design according to your comments, and when we have a design that we are both happy with, we will proceed to build the website on Shopify or WooCommerce.</p>
+                <p>We will create an initial design for your website and send you a link to this design for your review and feedback. We'll revise the design according to your comments, and when we are both happy with the design, we will proceed to build the website on Shopify or WooCommerce.</p>
 
-                <p>Please send me the content that you wish to be uploaded to the website, including:</p>
+                <p>Please send us the content that you wish to be uploaded to the website, including:</p>
                 <ul>
-                    <li>Product images, descriptions and prices</li>
-                    <li>Content for pages</li>
-                    <li>Content for blog posts</li>
+                    <li>Company logo</li>
+                    <li>Product images, descriptions* and prices</li>
+                    <li>Content for pages*</li>
+                    <li>Content for blog posts*</li>
                     <li>Your business address, email address and phone number</li>
                     <li>Your company number and VAT number (if applicable)</li>
                     <li>Links to social media profiles</li>
-                    <li>Any other content, like videos and photo galleries.</li>
+                    <li>Any other content, like videos and photos.</li>
                 </ul>
+
+                <p>*If you cannot provide the written content, we offer a copywriting service at an additional cost. Please let us know during our initial consultation if you require this service.</p>
 
                 <h3>Additional Considerations for Shopify Sites</h3>
 
-                <p>Your Shopify website will be built on a Shopify <em>development store</em>. Whilst the store is in development mode, you will not pay any Shopify hosting fees, and you will not be able to take any live orders. When the store is ready to launch, you will need to choose a Shopify plan - you must do this to start making sales on your website. At this point onwards you will start paying the hosting fees. The basic Shopify plan is £25/month.</p>
+                <p>Your Shopify website will be built on a Shopify <em>development store</em>. Whilst the store is in development mode, you will not pay any Shopify hosting fees, and you will not be able to take any live orders. When the store is ready to launch, you will need to choose a Shopify plan - you must do this to start making sales on your website. At this point onwards you will start paying the hosting fees. The Basic Shopify plan is currently £25/month + VAT.</p>
 
                 <h3>Additional Considerations for WooCommerce Sites</h3>
 
-                <p>WooCommerce is a plugin which works with the WordPress software. You will need to choose a hosting provider so that we can set up WordPress and build the site. I can help you to choose the hosting service that is most suitable for your needs.</p>
+                <p>WooCommerce is a plugin which works with the WordPress software. You will need to choose a hosting provider so that we can set up WordPress and build the site. We can help you to select the hosting service that is most suitable for your needs.</p>
 
-                <p>You must maintain your WordPress site on a regular basis to keep plugins, themes and WordPress core files up to date. Being a busy business owner, you probably don't have the time to spend with maintaining your website, so please consider taking up my <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a> service for help with managing your site.</p>
+                <p>You must maintain your WordPress site on a regular basis to keep plugins, themes and WordPress core files up to date. Being a busy business owner, you probably don't have the time to spend maintaining your website, so please consider taking up our <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a> service for help with managing your site.</p>
 
                 <h2>Examples of E-commerce Websites</h2>
 
-                <p>Check out these examples of online stores that I have built for past clients:</p>
-
-                <div id="wanandco" class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Wan-and-Co.jpg" alt="Wan&Co website">
-                        </div>
-                        <div class="col-7">
-                            <h2>Wan&Co</h2>
-                            <p><strong>A clothing brand with a big ambition to reduce waste</strong></p>
-                            <ul>
-                                <li>Website development</li>
-                                <li>Facebook Shop and Instagram Shop connection</li>
-                                <li>Google Analytics setup</li>
-                                <li>Google Search Console submission</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <p>Check out these examples of online stores that we have developed for past clients:</p>
 
                 <div id="crazy-thumbs" class="shadow-box-2">
                     <div class="row-2">
@@ -256,7 +241,7 @@ permalink: /ecommerce-websites/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://crazythumbs.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View Crazy Thumbs</a>
+                                target="_blank" rel="noopener noreferrer">View Crazy Thumbs >></a>
                             </div>
                         </div>
                     </div>
@@ -278,7 +263,28 @@ permalink: /ecommerce-websites/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://astonsoflondon.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Astons of London</a>
+                                target="_blank" rel="noopener noreferrer">View Astons of London >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="fortis-dpc" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Fortis DPC (Data Protection Compliance)">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>Fortis DPC</h2>
+                            <p><strong>Complete cyber security and data protection compliance solutions</strong></p>
+                            <ul>
+                                <li>Website redesign</li>
+                                <li>WooCommerce integration</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://sybiltec.com/fortis-dpc/">Fortis DPC >></a>
                             </div>
                         </div>
                     </div>
@@ -291,7 +297,7 @@ permalink: /ecommerce-websites/
                         </div>
                         <div class="col-7">
                             <h2>CNT Associates</h2>
-                            <p><strong>Business support and fundraising</strong></p>
+                            <p><strong>A business support and fundraising organisation based in Bexley, South East London</strong></p>
                             <ul>
                                 <li>Website development</li>
                                 <li>WooCommerce setup</li>
@@ -301,8 +307,7 @@ permalink: /ecommerce-websites/
                                 <li>Website review</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://www.cntassociates.com/"
-                                target="_blank" rel="noopener noreferrer">View CNT Associates</a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/cnt-associates/">View CNT Associates >></a>
                             </div>
                         </div>
                     </div>
@@ -318,14 +323,14 @@ permalink: /ecommerce-websites/
                             <p><strong>One-off unique handcrafted pieces made from African natural materials</strong></p>
                             <ul>
                                 <li>Product management</li>
-                                <li>Photo editing in Adobe Photoshop</li>
+                                <li>Website maintenance</li>
                                 <li>Theme customisations</li>
                                 <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://meitamlondon.com/" 
-                                target="_blank" rel="noopener noreferrer">View Meitam London</a>
+                                target="_blank" rel="noopener noreferrer">View Meitam London >></a>
                             </div>
                         </div>
                     </div>
@@ -347,8 +352,26 @@ permalink: /ecommerce-websites/
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
-                                target="_blank" rel="noopener noreferrer">View Wardell's Wardrobe</a>
+                                target="_blank" rel="noopener noreferrer">View Wardell's Wardrobe >></a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="wanandco" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/Wan-and-Co.jpg" alt="Wan&Co website">
+                        </div>
+                        <div class="col-7">
+                            <h2>Wan&Co</h2>
+                            <p><strong>A clothing brand with a big ambition to reduce waste</strong></p>
+                            <ul>
+                                <li>Website development</li>
+                                <li>Facebook Shop and Instagram Shop connection</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -405,7 +428,7 @@ permalink: /ecommerce-websites/
                                 <li>Website development</li>
                                 <li>Theme customisations</li>
                                 <li>Image gallery carousel with Slick</li>
-                                <li>Tidio chat bot setup</li>
+                                <li>Tidio chatbot setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>          
                         </div>
