Add Crazy Thumbs case study

--- a/clients.html
+++ b/clients.html
@@ -230,9 +230,9 @@ permalink: /clients/
                     <div class="col-4">
                         <h3>Crazy Thumbs</h3>
                         <img src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
-                        <!-- <div class="padding-btn">
+                        <div class="padding-btn">
                             <a class="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">View Crazy Thumbs &gt;&gt;</a>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
