--- a/sitemap.html
+++ b/sitemap.html
@@ -194,6 +194,7 @@ permalink: /sitemap/
                 <ul>
                     <li><a href="https://sybiltec.com/bexley-linkup/">Bexley Linkup</a></li>
                     <li><a href="https://sybiltec.com/cnt-associates/">CNT Associates</a></li>
+                    <li><a href="https://sybiltec.com/crazy-thumbs/">Crazy Thumbs</a></li>
                     <li><a href="https://sybiltec.com/fortis-dpc/">Fortis DPC</a></li>
                     <li><a href="https://sybiltec.com/jenup/">JenUp</a></li>
                     <li><a href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre</a></li>
