--- a/crazy-thumbs.html
+++ b/crazy-thumbs.html
@@ -1,5 +1,5 @@
 ---
-permalink: /web-design-surrey/
+permalink: /crazy-thumbs/
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -25,21 +25,19 @@ permalink: /web-design-surrey/
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Web Design Services in Surrey"
+                "name": "Crazy Thumbs"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Design Services in Surrey | Sybiltec</title>       
-        <meta name="Description" content="Web design for Surrey small businesses and charities. Contact us to discuss how we can elevate your online presence. Shopify, WordPress & WooCommerce.">
-        <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/web-design-surrey/">
+        <title>Crazy Thumbs | Case Study | Sybiltec Web Design</title>       
+        <meta name="Description" content="Crazy Thumbs sells vintage and contemporary games, consoles and accessories. Learn how we developed Crazy Thumbs' new e-commerce store with Shopify.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Design Services in Surrey | Sybiltec" />
-        <meta property="og:description" content="Web design for Surrey small businesses and charities. Contact us to discuss how we can elevate your online presence. Shopify, WordPress & WooCommerce." />
-        <meta property="og:url" content="https://sybiltec.com/web-design-surrey/" />
+        <meta property="og:title" content="Crazy Thumbs | Case Study | Sybiltec Web Design" />
+        <meta property="og:description" content="Crazy Thumbs sells vintage and contemporary games, consoles and accessories. Learn how we developed Crazy Thumbs' new e-commerce store with Shopify." />
+        <meta property="og:url" content="https://sybiltec.com/crazy-thumbs/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -48,7 +46,7 @@ permalink: /web-design-surrey/
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <meta name="geo.region" content="GB" />
         <meta name="geo.placename" content="London" />
@@ -114,6 +112,7 @@ permalink: /web-design-surrey/
         }
         }
         </script>
+        <link rel="canonical" href="https://sybiltec.com/crazy-thumbs/" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
@@ -150,164 +149,76 @@ permalink: /web-design-surrey/
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h1>Web Design Services in Surrey</h1>
+                <h1>Crazy Thumbs</h1>
             </div>
         </div>
         <div class="main section">
-            <div class="container-1140 padding-top padding-bottom">
+            <div class="container-1140">
                 <ol class="breadcrumb">
                     <li>
                         <a href="https://sybiltec.com">Home</a>
                     </li>
                     >
                     <li>
-                        Web Design Services in Surrey
+                        Crazy Thumbs
                     </li>
                 </ol>
-                <h2>The Importance of a Website for Your Small Business in Surrey</h2>
-                <p>Standing out in an increasingly competitive market is one of the biggest challenges for the small businesses of today. Being present on a few social media platforms is no longer sufficient to develop a successful business. You must combine a range of methods to form an effective marketing strategy, and your website should be central to that strategy.</p>
-
-                <p>Why should your website be at the core of your marketing? Because it is the one thing that you truly own and control. Additionally, running a business without a website can mean that you miss out on valuable opportunities to increase enquiries, leads, and make sales.</p>
-
-                <p>Here are a few reasons why you need a website:</p>
+                <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
+                <h2>Services Delivered</h2>
                 <ul>
-                    <li>A website works for you 24/7 </li>
-                    <li>A website helps to build trust with your potential customers. Many people won't even consider purchasing from a business that doesn't have a website</li>
-                    <li>You have full control over the look and feel of the design and functionality. Social media platforms don't offer you this level of freedom</li>
-                    <li>Organic search traffic is still one of the best ways to generate qualified leads.</li>
+                    <li>Website development (Shopify)</li>
+                    <li>Advanced navigation</li>
+                    <li>Loyalty programme setup</li>
+                    <li>Sound effects</li>
+                    <li>Klaviyo marketing platform setup</li>
+                    <li>Google Analytics setup</li>
+                    <li>Google Search Console submission</li>
                 </ul>
 
-                <p>If you do not already have a website, it's time to start thinking about building one. Or, if you have an existing site but it's not working for you for any reason, consider restructuring or redesigning it. Are you a <strong>small business owner in Surrey</strong> seeking support with your website? Contact us today to find out how we can help.</p>
+                <h2>Retro and Contemporary Games, Consoles and Accessories</h2>
 
+                <p>Crazy Thumbs is a seller of vintage and contemporary games, consoles and accessories. </p>
+
+                <p>When Crazy Thumbs first approached us, they were trading from a physical premises in Tooting, London, and needed a way of selling online, so we recommended the <a href="https://shopify.co.uk/" target="_blank" rel="noopener noreferrer">Shopify</a> platform for their e-commerce channel.</p>
+
+                <h2>Shopify Setup</h2>
+
+                <p>We chose the “Minimal” Shopify template for its simple design and suitability for the retro style of the store that we wanted to create. The colour palette consisted of just the black (#000000) and yellow (#F7FF1E) of the logo.</p>
+
+                <h2>Navigation System</h2>
+
+                <p>The majority of the website is structured in a very specific way, and therefore building the navigation was one of the most challenging aspects of the project. Creating the desired website structure involved some clever manipulation of the Liquid code. There are three levels of navigation:</p>
+
+                <p><em>Category > Brand > Model or format</em></p>
+
+                <p>For example, if you were looking to view all of the PS5 games which were available, you would browse the store in the following order:</p>
+
+                <p><em>Games > Sony > PS5</em></p>
+
+                <p>Similarly, if you wished to see all of the available Xbox One consoles, you would go to:</p>
+
+                <p><em>Consoles > Microsoft > Xbox One</em></p>
+
+                <h2>New Arrivals</h2>
+
+                <p>Crazy Thumbs wanted to keep email subscribers informed about new products that were added to the store on a fortnightly basis. In order to create this workflow, three steps were required:</p>
+
+                <ol>
+                    <li>We created a New Arrivals collection on the Shopify store. This collection would contain the latest products that have been added.</li>
+                    <li>We set up the email marketing platform, <a href="https://www.klaviyo.com/" target="_blank" rel="noopener noreferrer">Klaviyo</a>. We created a newsletter signup form and embedded it into the footer of the website.</li>
+                    <li>We built out an email campaign which was linked to the New Arrivals collection, and created an automation which would send out an email to subscribers every two weeks on a Friday afternoon. The email is automatically populated with the newest products that have arrived in the store.</li>
+                </ol>
+
+                <h2>Rewarding Loyal Customers</h2>
+
+                <p>Crazy Thumbs wanted to reward their loyal customers, so we installed and configured the <a href="https://smile.io/" target="_blank" rel="noopener noreferrer">Smile</a> app in order to create their own loyalty programme. We implemented a points-based system, so that customers can earn a certain number of points depending on how much they spend per order. Points are able to be redeemed both in store and online.</p>
+
+                <h2>Unique Features</h2>
+
+                <p>For the finishing touches and to add a little quirkiness to the website, we incorporated sound effects which play on various pages of the website, like the “Welcome!” message on the homepage, “What are you buying?” on the Games page and “What are you selling?” on the Trade In page.</p>
+                <div class="padding-btn">
+                    <a class="btn-secondary" href="https://crazythumbs.co.uk/" target="_blank" rel="noopener noreferrer">View Crazy Thumbs &gt;&gt;</a>
                 </div>
-
-                </div>
-
-                <div class="testimonials section grey padding-top padding-bottom center">
-                    <h2>Ready to Get Started?</h2>
-                    <div class="padding-top padding-bottom"><a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us Today!</a></div>
-                </div>
-
-                <div class="main section">
-                <div class="container-1140 padding-top padding-bottom">
-                <h2>Web Design Clients in Surrey</h2>
-                <p>We have worked with charities and small businesses in Surrey to help improve their websites and online presence. Below are some examples.</p>
-
-                <div id="fortis-dpc" class="shadow-box-2">                         
-                    <div class="row-2">
-                        <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Website refresh for Fortis DPC (Data Protection Compliance), Downside, Surrey">                         
-                        </div>
-                        <div class="col-7">
-                            <h2>Fortis DPC</h2>
-                            <p><strong>Delivering complete cyber security and data protection compliance solutions</strong></p>
-                            <p>We redesigned Fortis DPC's website with a brand new look and feel which upholds the company's values of strength, security and trust. We also set up the e-commerce functionality to showcase the new range of digital services being offered. Services provided:</p>
-                            <ul>
-                                <li>Website redesign</li>
-                                <li>WooCommerce integration</li>
-                                <li>Google Search Console submission</li>
-                                <li>Google Analytics setup</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/fortis-dpc/">Fortis DPC >></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="new-haw-community-centre" class="shadow-box-2">                         
-                    <div class="row-2">
-                        <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="Web design for New Haw Community Centre, Woodham, Surrey">                         
-                        </div>
-                        <div class="col-7">
-                            <h2>New Haw Community Centre, Woodham</h2>
-                            <p><strong>At the Centre of Our Community</strong></p>
-                            <p>The Community Centre benefits from a fresh, modern design and an improved booking system. Services provided:</p>
-                            <ul>
-                                <li>Website redesign</li>
-                                <li>LemonBooking integration</li>
-                                <li>Google Search Console submission</li>
-                                <li>Google Analytics setup</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre >></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="crazy-thumbs" class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
-                        </div>
-                        <div class="col-7">
-                            <h2>Crazy Thumbs</h2>
-                            <p><strong>Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</strong></p>
-                            <p>We helped Crazy Thumbs enjoy a seamless transition between operating via their physical store and the online experience. We recommended Shopify as the best choice for their e-commerce channel.</p>
-                            <ul>
-                                <li>Shopify store development</li>
-                                <li>Advanced navigation system</li>
-                                <li>Sound effects</li>
-                                <li>Embedded Twitch videos</li>
-                                <li>Google Analytics setup</li>
-                                <li>Google Search Console submission</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">Crazy Thumbs >></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
-                    <div class="row-2">
-                        <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/The-GDPR-Compliance-Consultancy-2.jpg" alt="The GDPR Compliance Consultancy">                         
-                        </div>
-                        <div class="col-7">
-                            <h2>The GDPR Compliance Consultancy</h2>
-                            <p><strong>Compliance, Delivered</strong></p>
-                            <p>The GDPR Compliance Consultancy required a website refresh and error fixing to improve SEO and increase traffic to the website. Services provided:</p>
-                            <ul>
-                                <li>Website refresh</li>
-                                <li>SEO improvements</li>
-                                <li>Blog post upload</li>
-                                <li>Theme customisations</li>
-                                <li>Google Search Console submission</li>
-                                <li>Google Analytis setup</li>
-                            </ul>        
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
-                                target="_blank" rel="noopener noreferrer">The GDPR Compliance Consultancy >></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <h2>Why Choose Sybiltec's Services</h2>
-                <p>At Sybiltec, we understand what makes websites work. We'll build a website for you that meets your business' individual needs. Here's how you'll benefit from the service:</p>
-                <ul>
-                    <li>We can make a start on your project right away and you'll be sent regular updates on the progress of your project, so you won't be kept waiting</li>
-                    <li>You'll receive a high quality service without the high costs that agencies charge</li>
-                    <li>You'll receive a custom design that's aligned with your business' unique brand and values</li>
-                    <li>You will be able to edit the website yourself after it has launched, saving you time and money</li>
-                    <li>We will communicate with you using jargon-free language</li>
-                </ul>
-
-                <h2>How the Web Design Process Works</h2>
-                <p><a href="https://sybiltec.com/contact/">Contact us</a> today to arrange a free initial consultation. During the consultation, we'll ask you some questions about your business and your reason for needing our website services. It's also a chance for you to ask us anything and determine if we are a good fit for each other. If you would like to take things further, we'll arrange a longer, in-depth conversation to understand your business and requirements in more detail.</p>
-
-                <p>If after this stage you are interested in commissioning our web design services, you'll be sent a quotation and an agreement which outlines the work to be carried out and the associated fees. There are no hidden charges, so you can be sure that the price quoted to you will be the price you pay.</p>
-
-                <p>Once the agreement has been signed by you, we will begin by planning the website structure - this will be in the form of a sitemap, and a list of pages (URLs) to be created for the site. </p>
-
-                <p>The next stage will involve creating a design for the website, beginning with the homepage. You'll be asked for feedback on the design, so the faster we can receive the feedback from you, the quicker we'll be able to progress onto the next stage.</p>
-
-                <p>When we agree on the final version of the designs, your website will be built on the most suitable platform, whether that is WordPress, Wix or Shopify. Finally, we will carry out thorough testing of the website to ensure that all functions are working correctly before launch.</p> 
-
-                <p>For further information on the website design process, please read the article <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
             </div>
         </div>
         <div class="contact section">
