--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -240,8 +240,7 @@ permalink: /ecommerce-websites/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://crazythumbs.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View Crazy Thumbs >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/crazy-thumbs/">View Crazy Thumbs >></a>
                             </div>
                         </div>
                     </div>
