Update Crazy Thumbs case study

--- a/crazy-thumbs.html
+++ b/crazy-thumbs.html
@@ -185,19 +185,27 @@ permalink: /crazy-thumbs/
 
                 <p>We chose the “Minimal” Shopify template for its simple design and suitability for the retro style of the store that we wanted to create. The colour palette consisted of just the black (#000000) and yellow (#F7FF1E) of the logo.</p>
 
+                <p><strong><em>Crazy Thumbs Homepage:</em></strong></p>
+
+                <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/crazythumbs.co.uk_.png" alt="Crazy Thumbs homepage">
+
                 <h2>Navigation System</h2>
 
                 <p>The majority of the website is structured in a very specific way, and therefore building the navigation was one of the most challenging aspects of the project. Creating the desired website structure involved some clever manipulation of the Liquid code. There are three levels of navigation:</p>
 
-                <p><em>Category > Brand > Model or format</em></p>
+                <p>Category > Brand > Model or format</p>
 
-                <p>For example, if you were looking to view all of the PS5 games which were available, you would browse the store in the following order:</p>
+                <p>For example, if you were looking to view all of the Xbox One consoles which were available, you would browse the store in the following order:</p>
 
-                <p><em>Games > Sony > PS5</em></p>
+                <p>Consoles > Microsoft > Xbox One</p>
 
-                <p>Similarly, if you wished to see all of the available Xbox One consoles, you would go to:</p>
+                <p>Similarly, if you wished to see all of the available Sony PS5 games, you would go to:</p>
 
-                <p><em>Consoles > Microsoft > Xbox One</em></p>
+                <p>Games > Sony > PS5</p>
+
+                <p><strong><em>Sony Collection page:</em></strong></p>
+
+                <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/crazythumbs.co.uk_pages_sony.png" alt="Crazy Thumbs Sony collection page">
 
                 <h2>New Arrivals</h2>
 
