Add Happily Clappily case study

--- a/sitemap.html
+++ b/sitemap.html
@@ -196,6 +196,7 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/cnt-associates/">CNT Associates</a></li>
                     <li><a href="https://sybiltec.com/crazy-thumbs/">Crazy Thumbs</a></li>
                     <li><a href="https://sybiltec.com/fortis-dpc/">Fortis DPC</a></li>
+                    <li><a href="https://sybiltec.com/happily-clappily-ever-laughter/">Happily Clappily Ever Laughter</a></li>
                     <li><a href="https://sybiltec.com/jenup/">JenUp</a></li>
                     <li><a href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre</a></li>
                 </ul>
