Update Greenwich workshops

--- a/index.html
+++ b/index.html
@@ -302,12 +302,11 @@
                     <div class="col-3"> 
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/free-workshops-greenwich-borough/">
-                                <img src="https://sybiltec.com/images/logos/royal-borough-greenwich.svg" 
-                                alt="Royal Borough of Greenwich"></a>
+                                <img src="https://sybiltec.com/images/logos/low-res/royal-borough-of-greenwich.svg" alt="Royal Borough of Greenwich"></a>
                             <div class="blog-card-text">                    
                                 <a href="https://sybiltec.com/free-workshops-greenwich-borough/" class="blog-title">Free Workshops for Greenwich Borough</a>
-                                <p>15 September 2024</p>
-                                <p>Attend our free workshops and webinars to help you learn vital skills and strategies for your business or organisation.</p>
+                                <p>22 September 2024</p>
+                                <p>Our free workshops help you develop vital skills and strategies for your business or organisation.</p>
                             </div>
                         </div>
                     </div>
