--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -392,8 +392,7 @@ permalink: /small-business-web-design/
                                 <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
-                                target="_blank" rel="noopener noreferrer">Happily Clappily Ever Laughter >></a>
+                                <a class ="btn-secondary" href="https://sybiltec.com/happily-clappily-ever-laughter/">Happily Clappily Ever Laughter >></a>
                             </div>
                         </div>
                     </div>
