Update Greenwich workshops

--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
         <div class="clients section container-1140 padding-top">
             <h2 class="center">What We've Done</h2>
                 <hr>
-            <p class="center">We have worked with businesses from a wide variety of industry sectors, including consultancies, wellbeing organisations, creatives, charities and fashion brands. See some examples of our best work below.</p>
+            <p class="center">We have worked with businesses from a wide variety of industry sectors, including consultancies, legal professionals, wellbeing organisations, creatives, charities and fashion brands. See some examples of our best work below.</p>
             <div class="padding-top center">
                 <div class="row">
                     <div class="col-3"><img src="images/clients/bexley-linkup.webp" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
                     <div class="col-3"><img src="images/clients/emrys.webp" alt="Emrys Technology & Consultancy"><p class="customer">Emrys Technology & Consultancy</p></div>
-                    <div class="col-3"><img src="images/clients/fortis-dpc.webp" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis DPC</p></div>
+                    <div class="col-3"><img src="images/clients/fortis-dpc.webp" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis Data Protection Compliance</p></div>
                     <div class="col-3"><img src="images/clients/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter"><p class="customer">Happily Clappily Ever Laughter</p></div>
                 </div>
                 <div class="row">
@@ -305,7 +305,7 @@
                                 <img src="https://sybiltec.com/images/logos/low-res/royal-borough-of-greenwich.svg" alt="Royal Borough of Greenwich"></a>
                             <div class="blog-card-text">                    
                                 <a href="https://sybiltec.com/free-workshops-greenwich-borough/" class="blog-title">Free Workshops for Greenwich Borough</a>
-                                <p>02 October 2024</p>
+                                <p>14 October 2024</p>
                                 <p>Our free workshops help you develop vital skills and strategies for your business or organisation.</p>
                             </div>
                         </div>
