--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@ permalink: /about/
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec Web Design"></a>
+                                <span class="logo"><a href="/">Sybiltec</a></span>
                             </div>
                         </div>
                         <div class="col-10">
@@ -209,7 +209,7 @@ permalink: /about/
 
             <div class="row">
                 <div class="col-6">
-                    <p><img src="https://sybiltec.com/images/Sybil-Mayard.jpg" alt="Sybil Mayard's headshot"></p>
+                    <p><img src="https://sybiltec.com/images/sybil-mayard-250x250.jpg" alt="Sybil Mayard's headshot"></p>
                     <p><strong>Sybil Mayard, MSc - Founder</strong></p>
                     <p>I am the Founder of Sybiltec, helping small business owners to improve their online presence through better web design. With my creativity and keen eye for detail, I craft visually appealing websites that perfectly reflect the businesses' brand and values. Notable clients include the Krach Institute for Tech Diplomacy at Purdue and Emrys Consulting.</p>
                     <a href="https://www.linkedin.com/in/sybil-m/" target="_blank" rel="noreferrer noopener"><i class="fa-brands fa-linkedin"></i></a>
