--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -146,7 +146,7 @@ permalink: /5-best-tools-for-remote-working/
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec Web Design"></a>
+                                <span class="logo"><a href="/">Sybiltec</a></span>
                             </div>
                         </div>
                         <div class="col-10">
