--- a/blog.html
+++ b/blog.html
@@ -128,7 +128,7 @@ permalink: /blog/
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec Web Design"></a>
+                                <span class="logo"><a href="/">Sybiltec</a></span>
                             </div>
                         </div>
                         <div class="col-10">
