--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@ permalink: /contact/
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec Web Design"></a>
+                                <span class="logo"><a href="/">Sybiltec</a></span>
                             </div>
                         </div>
                         <div class="col-10">
