--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="images/logos/sybiltec-logo-small.png" alt="Sybiltec Web Design"></a>
+                                <span class="logo"><a href="/">Sybiltec</a></span>
                             </div>
                         </div>
                         <div class="col-10">
@@ -133,7 +133,7 @@
             <div class="container-1140">
                 <div class="row">
                     <div class="col-6">
-                        <h1>Transform your website into a platform for <spam class="emphasis">growth</spam></h1>
+                        <h1>Transform your website into a platform for <span class="emphasis">growth</span></h1>
                         <p>Bespoke web design services for small businesses in London, Surrey, Kent, all across the UK and beyond.</p>
                         
                             <p><i class="fa-solid fa-circle-check"></i><span>Web Design</span></p>
