--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -150,7 +150,7 @@ permalink: /web-design-process-explained-12-easy-steps/
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/low-res/sybiltec.webp" alt="Sybiltec Web Design"></a>
+                                <span class="logo"><a href="/">Sybiltec</a></span>
                             </div>
                         </div>
                         <div class="col-10">
