Fix broken links

--- a/bexley-linkup.html
+++ b/bexley-linkup.html
@@ -187,7 +187,7 @@ permalink: /bexley-linkup/
 
                 <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/bexleylinkup.co.uk_.png" alt="Bexley Linkup homepage">
 
-                <p>Sybiltec Web Design is proud to be a supporter of Bexley Linkup. Special thanks also go to <a href="https://babelmonkey.co.uk/" target="_blank" rel="noopener noreferrer">Babel Monkey</a>, <a href="https://cntassociates.com/" target="_blank" rel="noopener noreferrer">CNT Associates</a>, <a href="https://www.grahambakerphotography.com/" target="_blank" rel="noopener noreferrer">Graham Baker Photography</a> and <a href="https://wardellswardrobe.com/" target="_blank" rel="noopener noreferrer">Wardell's Wardrobe</a> for making this project possible.</p>
+                <p>Sybiltec Web Design is proud to be a supporter of Bexley Linkup. Special thanks also to <a href="https://babelmonkey.co.uk/" target="_blank" rel="noopener noreferrer">babelMonkey</a>, <a href="https://cntassociates.com/" target="_blank" rel="noopener noreferrer">CNT Associates</a>, <a href="https://www.grahambakerphotography.com/" target="_blank" rel="noopener noreferrer">Graham Baker Photography</a> and <a href="https://www.rubylox.com/" target="_blank" rel="noopener noreferrer">Rubylox</a> for making this project possible.</p>
                 <div class="padding-btn">
                     <a class="btn-secondary" href="https://bexleylinkup.co.uk/" target="_blank" rel="noopener noreferrer">View Bexley Linkup &gt;&gt;</a>
                 </div>
