--- a/website-design.html
+++ b/website-design.html
@@ -268,6 +268,10 @@ permalink: /website-design/
                                 <li>Google Search Console submission</li>
                                 <li>Cookiebot setup</li>
                             </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://prd.lcglifts.co.uk/"
+                                target="_blank" rel="noopener noreferrer">LCG Lift Consultancy >></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -414,11 +418,7 @@ permalink: /website-design/
                                 <li>Out of stock email notifications</li>
                                 <li>Theme customisations</li>
                                 <li>Google Search Console submission</li>
-                            </ul>  
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://wardellswardrobe.com"
-                                target="_blank" rel="noopener noreferrer">Wardell's Wardrobe >></a>
-                            </div>
+                            </ul>
                         </div>
                     </div>
                 </div>
