--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/zitka-stone.png" class="avatar" alt="Zita Stone">
+                        <img src="images/zitka-stone.webp" class="avatar" alt="Zita Stone">
                         <p><strong><em>Zita Stone, NeroWireArt</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
@@ -260,7 +260,7 @@
                 </div>
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/gary-parker.png" class="avatar" alt="Gary Parker">
+                        <img src="images/gary-parker.webp" class="avatar" alt="Gary Parker">
                         <p><strong><em>Gary Parker, Managing Director, CNT Associates</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
@@ -274,7 +274,7 @@
                 </div>
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/aurore-lacabe.png" class="avatar" alt="Aurore Lacabe">
+                        <img src="images/aurore-lacabe.webp" class="avatar" alt="Aurore Lacabe">
                         <p><strong><em>Aurore Lacabe, Voice Teacher</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
@@ -313,7 +313,7 @@
                     <div class="col-3"> 
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/strategies-for-business-success/">
-                                <img src="https://sybiltec.com/images/black-lady-working-laptop-her-office-400x209.jpg" 
+                                <img src="images/black-lady-working-laptop-her-office-400x209.webp" 
                                 alt="Black lady working on a laptop in her office"></a>
                             <div class="blog-card-text">                    
                                 <a href="https://sybiltec.com/strategies-for-business-success/" class="blog-title">Smart Strategies for Small Business Success</a>
@@ -324,7 +324,7 @@
                     </div>
                     <div class="col-3">  
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/website-compliance-quick-guide/"><img src="https://sybiltec.com/images/wooden-gavel-sitting-on-computer-keyboard.jpg" alt="Wooden gavel sitting on computer keyboard"></a>
+                            <a href="https://sybiltec.com/website-compliance-quick-guide/"><img src="images/wooden-gavel-sitting-on-computer-keyboard.webp" alt="Wooden gavel sitting on computer keyboard"></a>
                                 <div class="blog-card-text">                      
                                 <a href="https://sybiltec.com/website-compliance-quick-guide/" class="blog-title">A Quick Guide to Website Compliance</a>
                                 <p>05 June 2024</p>
@@ -334,7 +334,7 @@
                     </div>
                     <div class="col-3">          
                         <div class="blog-card">
-                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business/"><img src="images/person-holding-black-iphone-5-400x209.jpg" alt="Person holding black iPhone 5"></a>  
+                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business/"><img src="images/person-holding-black-iphone-5-400x209.webp" alt="Person holding black iPhone 5"></a>  
                             <div class="blog-card-text">               
                                 <a href="https://sybiltec.com/cyber-security-best-practices-for-business/" class="blog-title">Cyber Security Best Practices for Business</a>
                                 <p>19 May 2024</p>
@@ -432,8 +432,8 @@
                     </div>
                     <div class="col-2-4">
                         <p><strong>Awards</strong></p>
-                        <img src="https://sybiltec.com/images/awards/best-sme-focused-web-design-agency-2024.png" alt="SME News Best SME-Focused Web Design Agency 2024">
-                        <img src="https://sybiltec.com/images/awards/digital-services-customer-service-excellence-award-2024.png" alt="SME News Digital Services Customer Service Excellence Award 2024">
+                        <img src="https://sybiltec.com/images/awards/best-sme-focused-web-design-agency-2024.webp" alt="SME News Best SME-Focused Web Design Agency 2024">
+                        <img src="https://sybiltec.com/images/awards/digital-services-customer-service-excellence-award-2024.webp" alt="SME News Digital Services Customer Service Excellence Award 2024">
                     </div>
                 </div>
             </div>
