--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -284,8 +284,8 @@ permalink: /6-tips-for-surviving-remote-working/
                     </div>
                     <div class="col-2-4">
                         <p><strong>Awards</strong></p>
-                        <img src="https://sybiltec.com/images/awards/best-sme-focused-web-design-agency-2024.png" alt="SME News Best SME-Focused Web Design Agency 2024">
-                        <img src="https://sybiltec.com/images/awards/digital-services-customer-service-excellence-award-2024.png" alt="SME News Digital Services Customer Service Excellence Award 2024">
+                        <img src="https://sybiltec.com/images/awards/best-sme-focused-web-design-agency-2024.webp" alt="SME News Best SME-Focused Web Design Agency 2024">
+                        <img src="https://sybiltec.com/images/awards/digital-services-customer-service-excellence-award-2024.webp" alt="SME News Digital Services Customer Service Excellence Award 2024">
                     </div>
                 </div>
             </div>
