Add LCG Lift Consultancy

--- a/clients.html
+++ b/clients.html
@@ -264,9 +264,9 @@ permalink: /clients/
                     <div class="col-4">
                         <h3>LCG Lift Consultancy</h3>
                         <img src="https://sybiltec.com/images/clients/lcg-lift-consultancy.jpg" alt="LCG Lift Consultancy">
-                        <!-- <div class="padding-btn">
+                        <div class="padding-btn">
                             <a class="btn-secondary" href="https://sybiltec.com/lcg-lift-consultancy/">View LCG Lift Consultancy &gt;&gt;</a>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="col-4">
                         <h3>LD Tiling Contractors</h3>
