--- a/lcg-lift-consultancy.html
+++ b/lcg-lift-consultancy.html
@@ -1,5 +1,5 @@
 ---
-permalink: /cnt-associates/
+permalink: /lcg-lift-consultancy/
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -37,7 +37,7 @@ permalink: /cnt-associates/
         <meta property="og:type" content="website" />
         <meta property="og:title" content="LCG Lift Consultancy | Case Study | Sybiltec Web Design" />
         <meta property="og:description" content="LCG Lift Consultancy offers design, installation, modernisation, condition reports and maintenance. We refreshed LCG's website for a modern look and feel." />
-        <meta property="og:url" content="https://sybiltec.com/cnt-associates/" />
+        <meta property="og:url" content="https://sybiltec.com/lcg-lift-consultancy/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -112,7 +112,7 @@ permalink: /cnt-associates/
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/cnt-associates/" />
+        <link rel="canonical" href="https://sybiltec.com/lcg-lift-consultancy/" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
